# nope.gl.android

./: settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
nopegl/: build.gradle.kts
nopegl/src/androidTest/java/org/nopeforge/nopegl/: NGLContentProvider.kt  NopeGLTest.kt
nopegl/src/main/cpp/: CMakeLists.txt  nopegl.c
nopegl/src/main/java/org/nopeforge/nopegl/: Config.kt  Context.kt
